fix: all features ⚡

--- a/src/views/welcome.ejs
+++ b/src/views/welcome.ejs
@@ -27,11 +27,11 @@
                               <tbody>
                                 <tr>
                                   <td>
-                                    <strong style="font-family:Helvetica,Arial,sans-serif;color:#5E50A1">Hello <%= email
+                                    <strong style="font-family:Helvetica,Arial,sans-serif;color:#7e98df">Hello <%= name
                                         %>,
                                     </strong>
 
-                                    <h1 style="font-size:22px;line-height:30px;color:#5E50A1;word-break:normal">
+                                    <h1 style="font-size:22px;line-height:30px;color:#7e98df;word-break:normal">
                                       Welcome to Telegram Chat App! Login to your account.
                                     </h1>
                                   </td>
@@ -49,7 +49,7 @@
                                 <tbody>
                                   <tr>
                                     <td
-                                      style="background-color:#5E50A1;color:#fff;text-align:center;border-radius:48px;padding:16px 24px;border-color:transparent;font-weight:bold;font-size:16px;line-height:1">
+                                      style="background-color:#7e98df;color:#fff;text-align:center;border-radius:48px;padding:16px 24px;border-color:transparent;font-weight:bold;font-size:16px;line-height:1">
                                       <a style="color: white; text-decoration: none;" href=<%=url_login %>> Sign In
                                       </a>
                                     </td>
@@ -81,7 +81,7 @@
                 </tr>
                 <tr>
                   <td style="text-align:center;font-size:13px">
-                    <a style="color:#5E50A1" target="_blank" href=<%=url_home %>>
+                    <a style="color:#7e98df" target="_blank" href=<%=url_home %>>
                       Telegram Chat App
                     </a>
                   </td>
